--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,9 +6,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_close_main_page"
+        android:padding="20dp"
+        android:background="@android:color/darker_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MainActivity" />
+        android:text="点击改变MainActivity显示" />
 
 </LinearLayout>
