--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:gravity="center"
+        android:padding="20dp"
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MainActivity" />
+        android:text="Current:Main2Activity 点击进入home进程： HomeActivity" />
+
 
 </LinearLayout>
